Layout structure build

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,9 @@ title: Welcome to Middleman
 
 <h1>
   Middleman is Running. Yes!
+  <span>yo</span>
 </h1>
+<%= partial "partials/abc" %>
 
 <%= link_to(
   "Read Documentation",
