--- a/source/css/all.css.scss
+++ b/source/css/all.css.scss
@@ -1,3 +1,5 @@
+
+
 body {
   background-color: #fbc547;
   color: #333;
@@ -22,3 +24,5 @@ a {
   margin-bottom: 1rem;
   width: 10rem;
 }
+
+@import "styles";
