--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,16 +1,73 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
-    <%= stylesheet_link_tag "site" %>
-    <%= javascript_include_tag "site" %>
-  </head>
-  <body>
-    <%= yield %>
-  </body>
+<%= yield_content :before_head %>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="content-language" content="en-us">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
+
+
+  <% if current_page.data.canonical %>
+      <link rel="canonical" href="<%= current_page.data.canonical %>">
+  <% end %>
+
+  <% unless current_page.data.disable_robots %>
+      <meta name="robots" content="index, follow" />
+  <% end %>
+
+  <!-- Use the title from a page's frontmatter if it has one -->
+  <title><%= current_page.data.title || "Your EveryDay Health" %></title>
+
+  <%= favicon_tag '/img/favicon.png' %>
+
+  <% unless current_page.data.disable_og %>
+      <% ogp_tags do |name, value| %>
+          <meta property="<%= name %>" content="<%= value %>"/>
+      <% end %>
+  <% end %>
+
+  <% unless current_page.data.hide_meta_desc %>
+      <meta name="description" content="<%= current_page.data.meta_description || "" %>">
+  <% end %>
+
+  <%= yield_content :before_css %>
+  <% unless current_page.data.disable_css %>
+      <%= stylesheet_link_tag 'all' %>
+  <% end %>
+  <%= yield_content :after_css %>
+  <!--[if lt IE 9]>
+  <%= javascript_include_tag 'respond' %>
+  <![endif]-->
+
+  <%= javascript_include_tag "all" %>
+</head>
+
+<body class="<%= page_classes %>">
+
+<% if content_for?(:page_header) %>
+    <%= yield_content :page_header %>
+<% else %>
+    <% unless current_page.data.disable_header %>
+        <div id="header">
+          <%= partial 'partials/header' %>
+        </div>
+    <% end %>
+<% end %>
+
+<div id="content">
+  <%= yield %>
+</div>
+
+<% if content_for?(:page_footer) %>
+    <%= yield_content :page_footer %>
+<% else %>
+    <% unless current_page.data.disable_footer %>
+        <div id="footer">
+          <%= partial 'partials/footer' %>
+        </div>
+    <% end %>
+<% end %>
+
+</body>
 </html>
