--- a/source/partials/header.erb
+++ b/source/partials/header.erb
@@ -1,1 +1,32 @@
-header
+<header id="header" class="main-header">
+  <div class="wrapper">
+
+    <div class="logo">
+      <a href="">
+        <%= image_tag 'flock-logo.svg' %>
+      </a>
+    </div>
+
+    <div class="menu">
+      <ul class="nav">
+        <li> Health A-Z
+          <div class="inner-nav">
+            <ul>
+              <li class="close-second-menu first">
+                <div class="js-back-arrow"><span class="back-arrow"></span></div>
+              </li>
+              <li><a href="<%= data.url.slug.engineering %>">Engineering Teams</a></li>
+              <li><a href="<%= data.url.slug.salespage %>">Sales Teams</a></li>
+              <li><a href="<%= data.url.slug.marketing %>">Marketing Teams</a></li>
+              <li><a href="<%= data.url.slug.product %>">Product Teams</a></li>
+            </ul>
+          </div>
+        </li>
+        <li> Diet and fitness</li>
+        <li> hair and beauty</li>
+        <li> Pregnancy & parenting</li>
+        <li> Sex & relationship</li>
+      </ul>
+    </div>
+  </div>
+</header>
