--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,12 +1,69 @@
 ---
 title: Welcome to Middleman
 ---
-
-<section class="home-content">
-  <div class="top-section">
+<div class="home-page">
+  <div class="top-section-hp">
     <div class="wrapper">
-      <h1> How to make yourself healthy</h1>
+      <div class="content-block">
+        <h1>Don’t Delay, Start Today!</h1>
+      </div>
     </div>
   </div>
 
-</section>
+  <section class="main-content">
+    <div class="unit-content">
+      <h3> LATEST STORIES </h3>
+
+      <a href="javascript:void(0)" class="unit-block">
+        <div class="image-wrap">
+          <img class="topic-snap" src="/images/diabetes.jpg" alt="Diabetes Image"/>
+        </div>
+        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
+        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
+      </a>
+
+      <a href="javascript:void(0)" class="unit-block unit-block-middle">
+        <div class="image-wrap">
+          <img class="topic-snap" src="/images/topic7.jpg" alt="Diabetes Image"/>
+        </div>
+        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
+        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
+      </a>
+
+
+      <a href="javascript:void(0)" class="unit-block">
+        <div class="image-wrap">
+          <img class="topic-snap" src="/images/topic2.jpg" alt="Diabetes Image"/>
+        </div>
+        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
+        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
+      </a>
+
+      <a href="javascript:void(0)" class="unit-block">
+        <div class="image-wrap">
+          <img class="topic-snap" src="/images/topic3.jpg" alt="Diabetes Image"/>
+        </div>
+        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
+        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
+      </a>
+
+      <a href="javascript:void(0)" class="unit-block unit-block-middle">
+        <div class="image-wrap">
+          <img class="topic-snap" src="/images/topic8.jpg" alt="Diabetes Image"/>
+        </div>
+        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
+        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
+      </a>
+
+      <a href="javascript:void(0)" class="unit-block">
+        <div class="image-wrap">
+          <img class="topic-snap" src="/images/topic5.jpg" alt="Diabetes Image"/>
+        </div>
+        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
+        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
+      </a>
+
+
+    </div>
+  </section>
+</div>
