--- a/source/partials/header.erb
+++ b/source/partials/header.erb
@@ -1,5 +1,9 @@
+
+
 <header id="header" class="main-header">
   <div class="wrapper">
+    <div class="mob-nav"><span class="mob-navicon"><em></em><em></em><em></em><em></em></span></div>
+    <div class="body-backdrop"></div>
 
     <div class="logo">
       <a href="">
@@ -9,6 +13,7 @@
 
     <div class="menu">
       <ul class="nav">
+        <li class="close-nav"> <div>Close →</div> </li>
         <li> Health A-Z
           <div class="inner-nav">
             <ul>
