--- a/source/css/pages/_home.scss
+++ b/source/css/pages/_home.scss
@@ -1,11 +1,110 @@
-.home-content{
-  width: 100%;
+.home-page {
+  // Top section CSS
+  .top-section-hp {
+    width: 100%;
+    background: url('/images/hp-masthead-mob.jpg') -211px 0px no-repeat;
+    background-size: cover;
+    height: 426px;
 
-  .top-section{
-    background: #0c0e1a url('/images/masthead-bg.jpg') 0 0 repeat;
+    .content-block {
+      display: block;
+      width: 450px;
+      text-align: center;
+    }
 
-    h1{
+    h1 {
+      display: block;
       color: #fff;
+      text-transform: uppercase;
+    }
+  }
+
+  // Main Content CSS
+  .main-content{
+    display: block;
+    width: 100%;
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  }
+
+  .unit-content{
+    display: block;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 0;
+    overflow: hidden;
+
+    h2 {
+      font-weight: 600;
+      padding: 20px 0 15px 0;
+    }
+
+    h3{
+      font-weight: 600;
+      padding-bottom: 15px;
+      border-bottom: 1px solid #eee;
+    }
+
+    .unit-block{
+      float: left;
+      display: block;
+      width: 100%;
+      padding: 40px 0 0 0;
+      max-width: 380px;
+      cursor: pointer;
+
+      &:hover{
+        h2{
+          color: #000;
+        }
+
+        .topic-snap{
+          transform: scale(1.07);
+          transition: all ease-in 0.5s;
+        }
+      }
+    }
+
+    .unit-block-middle{
+      padding: 40px 30px 0 30px;
+    }
+    
+    .image-wrap{
+      display: block;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .topic-snap{
+      display: block;
+      width: 100%;
+      max-width: 380px;
+      max-height: 225px;
+      padding: 0;
+      margin: 0;
+      transition: all ease-out 0.5s;
+      transform: scale(1);
+    }
+  }
+
+}
+
+@media (min-width: 1000px) {
+  .home-page {
+    .top-section-hp {
+      background: url('/images/hp-masthead.jpg') 0px -150px no-repeat;
+      background-size: cover;
+      height: 600px;
+
+      .content-block {
+        text-align: left;
+        padding-top: 250px;
+        padding-left: 130px;
+      }
+    }
+
+    .unit-content{
+
     }
   }
 }
