--- a/source/css/partials/_header.scss
+++ b/source/css/partials/_header.scss
@@ -1,8 +1,45 @@
 
+body.body-freeze {
+  overflow: hidden;
+
+  .body-backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    z-index: 1;
+  }
+}
+
+
+.mob-nav {
+  display: inline-block;
+  position: fixed;
+  z-index: 10;
+  right: 10px;
+  top: 21px !important;
+  cursor: pointer;
+}
+
+.mob-navicon {
+  display: block;
+
+  em {
+    margin-bottom: 3px;
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: #fff;
+  }
+}
+
+
 #header {
   float: left;
   width: 100%;
-  background: #0c0e1a url('/images/masthead-bg.jpg') 0 0 repeat;
+  background: rgba(0,0,0,0.5);
 
   .logo {
     float: left;
@@ -19,18 +56,36 @@
   }
 
   ul.nav {
-    float: left;
-    width: 100%;
-    margin: 20px 0 0 0;
+    float: none;
+    position: fixed;
+    height: 100%;
+    width: 0;
+    right: 0;
+    top: 0;
+    margin: 0;
     padding: 0;
+    background: #000;
+    z-index: 2;
+    transition: width 0.5s cubic-bezier(0, 0, 0.3, 1);
+
+    li.close-nav {
+      color: #fff;
+      cursor: pointer;
+      padding: 22px 0 22px 20px;
+      margin-bottom: 10px;
+      background: #313030;
+    }
 
     li {
       color: #fff;
-      display: inline-block;
-      cursor: pointer;
-      padding: 5px 0;
-      margin: 0 10px;
+      display: block;
+      font-size: 14px;
+      padding: 15px 10px 15px 15px;
+      margin: 0;
       position: relative;
+      line-height: 24px;
+      cursor: pointer;
+      text-transform: uppercase;
 
       &:hover{
         color: #ccc;
@@ -108,7 +163,28 @@
 
 @media (min-width: 1000px) {
 
+  .mob-nav {
+    display: none;
+  }
 
+  #header{
+    ul.nav {
+      float: left;
+      position: static;
+      width: 100%;
+      margin: 20px 0 0 0;
+      background: none;
+
+      li.close-nav{
+        display: none;
+      }
+      li {
+        padding: 5px 0;
+        margin: 0 10px;
+        display: inline-block;
+      }
+    }
+  }
   #header .nav  .inner-nav {
     display: none;
     width: 157px;
