--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,59 +11,19 @@ title: Welcome to Middleman
   </div>
 
   <section class="main-content">
-    <div class="unit-content">
+    <div class="unit-content clearfix">
       <h3> LATEST STORIES </h3>
-
-      <a href="javascript:void(0)" class="unit-block">
-        <div class="image-wrap">
-          <img class="topic-snap" src="/images/diabetes.jpg" alt="Diabetes Image"/>
-        </div>
-        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
-        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
-      </a>
-
-      <a href="javascript:void(0)" class="unit-block unit-block-middle">
-        <div class="image-wrap">
-          <img class="topic-snap" src="/images/topic7.jpg" alt="Diabetes Image"/>
-        </div>
-        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
-        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
-      </a>
-
-
-      <a href="javascript:void(0)" class="unit-block">
-        <div class="image-wrap">
-          <img class="topic-snap" src="/images/topic2.jpg" alt="Diabetes Image"/>
-        </div>
-        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
-        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
-      </a>
-
-      <a href="javascript:void(0)" class="unit-block">
-        <div class="image-wrap">
-          <img class="topic-snap" src="/images/topic3.jpg" alt="Diabetes Image"/>
-        </div>
-        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
-        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
-      </a>
-
-      <a href="javascript:void(0)" class="unit-block unit-block-middle">
-        <div class="image-wrap">
-          <img class="topic-snap" src="/images/topic8.jpg" alt="Diabetes Image"/>
-        </div>
-        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
-        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
-      </a>
-
-      <a href="javascript:void(0)" class="unit-block">
-        <div class="image-wrap">
-          <img class="topic-snap" src="/images/topic5.jpg" alt="Diabetes Image"/>
-        </div>
-        <h2>Scientists Studying Brain Stimulation as Possible Diabetes Treatment</h2>
-        <p>Researchers say stimulating a specific part of the brain can increase dopamine…</p>
-      </a>
-
-
+      <%= partial 'partials/hp-latest-articles' %>
     </div>
   </section>
+
+  <section class="main-content">
+    <div class="unit-content clearfix">
+      <h3> TRENDING STORIES </h3>
+      <div class="trending-stories-block clearfix">
+        <%= partial 'partials/hp-trending-stories' %>
+      </div>
+    </div>
+  </section>
+
 </div>
