--- a/source/css/pages/_home.scss
+++ b/source/css/pages/_home.scss
@@ -20,62 +20,61 @@
   }
 
   // Main Content CSS
-  .main-content{
+  .main-content {
     display: block;
     width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   }
 
-  .unit-content{
+  .unit-content {
     display: block;
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 40px 0;
-    overflow: hidden;
+    padding: 30px 0;
 
     h2 {
       font-weight: 600;
-      padding: 20px 0 15px 0;
+      padding: 10px 0 15px 0;
     }
 
-    h3{
+    h3 {
       font-weight: 600;
       padding-bottom: 15px;
       border-bottom: 1px solid #eee;
     }
 
-    .unit-block{
+    .unit-block {
       float: left;
       display: block;
       width: 100%;
       padding: 40px 0 0 0;
       max-width: 380px;
       cursor: pointer;
+      box-sizing: border-box;
 
-      &:hover{
-        h2{
+      &:hover {
+        h2 {
           color: #000;
         }
 
-        .topic-snap{
+        .topic-snap {
           transform: scale(1.07);
           transition: all ease-in 0.5s;
         }
       }
     }
 
-    .unit-block-middle{
-      padding: 40px 30px 0 30px;
-    }
-    
-    .image-wrap{
+    .image-wrap {
       display: block;
       width: 100%;
+      border: 1px solid #f7f7f7;
       overflow: hidden;
     }
 
-    .topic-snap{
+    .topic-snap {
       display: block;
       width: 100%;
       max-width: 380px;
@@ -85,12 +84,42 @@
       transition: all ease-out 0.5s;
       transform: scale(1);
     }
+
+    // for trending stories block
+    .trending-stories-block {
+      display: block;
+      width: 100%;
+      max-width: 800px;
+    }
+
+    .trending-block {
+      max-width: 100%;
+
+      h2 {
+        padding-top: 20px;
+      }
+
+      .left-block {
+        float: left;
+        width: 100%;
+      }
+
+      .right-block {
+        float: left;
+        width: 100%;
+      }
+
+    }
   }
 
 }
 
 @media (min-width: 1000px) {
   .home-page {
+    .main-content {
+      padding: 0;
+    }
+
     .top-section-hp {
       background: url('/images/hp-masthead.jpg') 0px -150px no-repeat;
       background-size: cover;
@@ -103,8 +132,44 @@
       }
     }
 
-    .unit-content{
+    .unit-content {
+      padding: 60px 0;
 
+      h2 {
+        padding: 20px 0 15px 0;
+        font-size: 22px;
+      }
+
+      .unit-block {
+        box-sizing: inherit;
+      }
+
+      .unit-block-middle {
+        padding: 40px 30px 0 30px;
+      }
+
+      .trending-stories-block {
+        padding-right: 20px;
+      }
+
+      .trending-block {
+        h2 {
+          padding-top: 0;
+          font-size: 26px;
+        }
+
+        .left-block {
+          width: 40%;
+        }
+
+        .right-block {
+          width: 60%;
+          padding: 0 20px;
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+        }
+      }
     }
   }
 }
